--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -43,13 +43,12 @@
             android:orientation="vertical"
             app:layout_constraintGuide_end="@dimen/spacingBase" />
 
-
         <ImageView
             android:id="@+id/item_image"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:background="@drawable/shape_border_radius_10"
-            android:foreground="@color/semi_transparent"
+            android:foreground="@color/black_alpha_5"
             android:scaleType="centerCrop"
             app:imageUrl="@{item.wishItem.image == null ? item.wishItem.imageUrl : item.wishItem.image}"
             app:layout_constraintBottom_toBottomOf="@id/guild_bottom"
@@ -60,13 +59,13 @@
             android:id="@+id/item_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginHorizontal="@dimen/spacing10"
+            android:layout_marginHorizontal="@dimen/spacingSmall"
+            android:layout_marginTop="@dimen/spacing5"
             android:ellipsize="end"
-            android:fontFamily="@font/suit_r"
             android:maxLines="2"
             android:text="@{item.wishItem.name}"
+            android:textAppearance="@style/TextAppearance.Suit.D2"
             android:textColor="@color/gray_700"
-            android:textSize="@dimen/typographyDescription"
             app:layout_constraintEnd_toStartOf="@id/delete"
             app:layout_constraintStart_toEndOf="@id/item_image"
             app:layout_constraintTop_toTopOf="@id/item_image"
@@ -106,12 +105,11 @@
                 android:layout_width="24dp"
                 android:layout_height="wrap_content"
                 android:layout_marginHorizontal="2dp"
-                android:fontFamily="@font/suit_r"
                 android:gravity="center_horizontal"
                 android:maxLength="2"
                 android:text="@{Integer.toString(item.cartItemInfo.count)}"
+                android:textAppearance="@style/TextAppearance.Suit.D2"
                 android:textColor="@color/gray_700"
-                android:textSize="@dimen/typographyBase"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@id/plus"
                 app:layout_constraintStart_toEndOf="@id/minus"
@@ -133,9 +131,8 @@
             android:id="@+id/item_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/montserrat_b"
+            android:textAppearance="@style/TextAppearance.Montserrat.H2"
             android:textColor="@color/gray_700"
-            android:textSize="18sp"
             app:layout_constraintBottom_toBottomOf="@id/won"
             app:layout_constraintEnd_toStartOf="@id/won"
             app:layout_constraintTop_toTopOf="@id/won"
@@ -146,10 +143,9 @@
             android:id="@+id/won"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="@font/suit_r"
             android:text="@string/won"
+            android:textAppearance="@style/TextAppearance.Suit.D2"
             android:textColor="@color/gray_700"
-            android:textSize="@dimen/typographyBase"
             app:layout_constraintBottom_toBottomOf="@id/guild_bottom"
             app:layout_constraintEnd_toEndOf="@id/guild_end" />
     </androidx.constraintlayout.widget.ConstraintLayout>
