--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -171,8 +171,7 @@
 
     <style name="Widget.Tab.TextAppearance.Title" parent="">
         <item name="android:textColor">@color/gray_700</item>
-        <item name="android:textSize">20sp</item>
-        <item name="fontFamily">@font/suit_b</item>
+        <item name="android:textAppearance">@style/TextAppearance.Suit.H1</item>
         <item name="android:layout_marginStart">@dimen/spacingBase</item>
     </style>
 
