--- a/app/src/main/res/layout/item_folder_vertical.xml
+++ b/app/src/main/res/layout/item_folder_vertical.xml
@@ -30,7 +30,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:src="@drawable/sample" />
+            tools:src="@drawable/sample"
+            tools:clipToOutline="true"/>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
