--- a/app/src/main/res/layout/fragment_folder_detail.xml
+++ b/app/src/main/res/layout/fragment_folder_detail.xml
@@ -6,10 +6,6 @@
 
     <data>
 
-        <import type="android.view.View" />
-
-        <import type="androidx.navigation.Navigation" />
-
         <variable
             name="viewModel"
             type="com.hyeeyoung.wishboard.presentation.home.WishListViewModel" />
@@ -20,47 +16,21 @@
         android:layout_height="match_parent"
         android:background="@color/white">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageButton
-                android:id="@+id/back"
-                style="@style/Widget.Button.Icon.Navigation"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:onClick="@{(v) -> Navigation.findNavController(v).popBackStack()}"
-                android:src="@drawable/ic_back"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <TextView
-                android:id="@+id/folder_name"
-                style="@style/Widget.Tab.Detail.TextAppearance.Title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{viewModel.folderItem.name}"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="폴더명" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <include
+            android:id="@+id/top_app_bar"
+            layout="@layout/view_top_app_bar"
+            app:title="@{viewModel.folderItem.name}" />
 
         <TextView
             style="@style/Widget.TextAppearance.NoItemView.Detail"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/folder_detail_no_item_view"
-            android:visibility="@{viewModel.wishList.size() > 0 ? View.GONE : View.VISIBLE}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintTop_toBottomOf="@id/top_app_bar"
+            app:visibility="@{viewModel.wishList.size() &lt;= 0}"
             tools:visibility="gone" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -71,8 +41,11 @@
             android:scrollbarSize="5dp"
             android:scrollbarThumbVertical="@android:color/darker_gray"
             android:scrollbars="vertical"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar" />
+            app:layout_constraintTop_toBottomOf="@id/top_app_bar"
+            app:spanCount="2"
+            tools:listitem="@layout/item_wish" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
