--- a/app/src/main/res/layout/fragment_gallery_image.xml
+++ b/app/src/main/res/layout/fragment_gallery_image.xml
@@ -15,9 +15,9 @@
         android:background="@color/black">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/toolbar"
+            android:id="@+id/top_app_bar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="@dimen/widgetAppBarHeight"
             app:layout_constraintTop_toTopOf="parent">
 
             <ImageButton
@@ -32,10 +32,10 @@
 
             <TextView
                 android:id="@+id/item_upload_title"
-                style="@style/Widget.Tab.Detail.TextAppearance.Title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/wish_item_registration_gallery_image_title"
+                android:textAppearance="@style/TextAppearance.Suit.H3"
                 android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -60,7 +60,7 @@
             android:layout_height="0dp"
             app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/toolbar"
+            app:layout_constraintTop_toBottomOf="@id/top_app_bar"
             app:spanCount="3"
             tools:itemCount="20"
             tools:listitem="@layout/item_gallery_image" />
