--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -138,7 +138,7 @@
 
     <style name="Widget.Button.Full.Activate.Black" parent="Widget.Button.Full.Basic">
         <item name="cornerRadius">0dp</item>
-        <item name="backgroundTint">@color/selector_button_background_sub_color</item>
+        <item name="android:backgroundTint">@color/selector_button_background_sub_color</item>
         <item name="android:textColor">@color/selector_button_text_sub_color</item>
     </style>
 
